Update author markup

--- a/skysub.tex
+++ b/skysub.tex
@@ -48,11 +48,18 @@
     \IfFileExists{vc.tex}{\slugcomment{Version \VCRevision\ by \VCAuthor\ on \VCDateTEX , \VCTime .}
 }{\slugcomment{Revision unknown.}}
 \title{ANDROIDS I. Near-Infrared Imaging of M31}
-\author{Jonathan Sick, Stéphane Courteau and the \androids\ collaboration}
+\author{Jonathan Sick, Stéphane Courteau}
 \affil{Queen's University}
-\affil{Stirling Hall, Kingston Canada}
 \email{jsick@astro.queensu.ca}
-% \author{Michael McDonald, Brent Tully, Roelof de Jong}
+\author{Jean-Charles Cuillandre}
+\affil{Canada-France Hawaii Telescope Corp.}
+\author{Michael McDonald}
+\affil{Massachusetts Institute of Technology}
+\author{Brent Tully}
+\affil{University of Hawaii Institute for Astronomy}
+\and
+\author{The \androids\ collaboration}
+\affil{}
 
 % ============================================================================
 \begin{abstract}
